--- a/release/manifest.json
+++ b/release/manifest.json
@@ -6,8 +6,13 @@
   "content_scripts": [
     {
       "matches": ["http://www.cineplex.com/Showtimes/*"],
-      "css": ["style.css"],
-      "js": ["underscore.js", "async.js", "jquery.js", "extension.js"]
+      "css": ["cineplex_list.css"],
+      "js": [
+        "libs/underscore.js",
+        "libs/async.js",
+        "libs/jquery.js",
+        "cineplex_list.js"
+      ]
     }
   ],
 
