Reorganized files in a project

--- a/src/cineplex_movie/tsconfig.json
+++ b/src/cineplex_movie/tsconfig.json
@@ -4,7 +4,7 @@
         "outFile": "./../../release/cineplex_movie.js"
     },
     "files": [
-        "./../cineplex_movie.ts",
+        "./cineplex_movie.ts",
         "./../common.ts",
         "./../index.d.ts"
     ]
